2006-07-25  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>

	* README, configure.ac, getSchema.sh.pre.in: 
	Fixed 1528455: added support for local CIM schema files.

2006-07-25 Sven Schuetz

	* cimslp.c:
	Fixed potential potential memory problem

2006-07-19  Sven Schuetz

	* args.c, array.c, brokerEnc.c, brokerUpc.c, cimXmlGen.c, cimXmlRequest.c, cimcClientSfcbLocal.c, constClass.c, context.c, control.c, datetime.c, enumeration.c, instance.c, internalProvider.c, interopProvider.c, native.h, objectImpl.c, objectpath.c, predicate.c, queryOperation.c, result.c, selectexp.c, sqlStatement.c, string.c, support.c, value.c:
	Fixed 1525280: fixed segfault when linking with sfcc code by renaming function calls
	* cimslp.c, cimslpCMPI.c, cimslpSLP.c:
	Fixed 1296278: added slp support
	* configure.ac, acinclude.m4, Makefile.am
	Modified build process to include SLP stuff

2006-07-18  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>

	* internalProvider.c, cimXmlGen.c, cimXmlOps.y: 
	Fixed 1524781: fixed handling of local instance path values for
	association class reference properties.

2006-07-17	Sven Schuetz

	* cimslp.c, cimslpCMPI.c, cimslpSLP.c:
	Added SLP Support
	* hashtable.c, utilFactory.c, utilHashtable.c, utilStringbuffer.c:
	Moved to sfcUtil, build as shared library now
	* Makefile.am, configure.am
	Included slp stuff into build process

2006-07-07  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>

	* fileRepository.c, fileRepository.h, internalProvider.c: 
	Fixed 1518696: rewrote the blob index processing for lookup of
	instances in the repository.

2006-06-29  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>

	* value.c: 
	Additional fix for 1439399. The value2chars function was not embedding
	the datetime string in quotes, which lead to a failure in the CIMXML
	generation.

2006-06-26  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>

	* brokerUpc.c: 